--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.multiprocesssp.ui"
+    package="com.multiprocesssp"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,12 +9,13 @@
         android:targetSdkVersion="14" />
 
     <application
+        android:name=".base.BaseApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +23,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.ActivityA"
+            android:process=":a" />
+        <provider
+            android:authorities="com.multiprocesssp.sharedpreferences.SPContentProvider"
+            android:name=".sharedpreferences.SPContentProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
